# platformer

./: .gitignore  .gitmodules  Cargo.toml
.cargo/: config.toml
assets/Levels/: basic.ldtk
assets/Levels/basic/simplified/Basic_1/: IntGrid.csv  data.json
assets/MaplestoryDefaultSpriteSheet/: 5.json  maple-default.ase  maple-default.json
assets/parallax-cube/: Parallax-Cube.ase
src/: animated_sprite.rs  custom_parallax.rs  hello.rs  main.rs  parallax.rs  world.rs
