[package]
name = "platformer"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tmills9208/platformer.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = ["deps/*"]

[dependencies]
bevy = "0.7"
bevy-parallax = "0.1.2"
# bevy_ecs_ldtk = "0.3"

# using forks here / and in "./.cargo/config.toml"
# Edit: using git submodules atm
# [patch.crates-io]
# bevy-parallax = { path = "./deps/bevy-parallax" }
